fixed the headers display according to when timer ends, made button display to none once pressed..

--- a/stylez.css
+++ b/stylez.css
@@ -27,7 +27,7 @@ body{
 #pressme{
 
     text-align: center;
-    border: 2px solid #FF0000;
+    border: 2px solid black;
     border-radius: 20px;
     height: 40px;
     width: 200px;
