almost finished with logic on how to determine a right answer and how to credit a person if the answer is right / wrong

--- a/stylez.css
+++ b/stylez.css
@@ -4,9 +4,25 @@ body{
 }
 
 
-
+#thetimer{
+    text-align: center;
+    padding-top: 10%;
+}
 .top-bar{
   text-align: center;
+}
+#quizarea{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display:
+
+}
+#question{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none;
 }
 
 
