made ALOT of changes and finalized alot of the features. almost completed everything

--- a/stylez.css
+++ b/stylez.css
@@ -52,3 +52,11 @@ body{
     margin-top:40px;
 }
  
+#score{
+    display: none;
+}
+
+#scoretable{
+    display: none;
+    border: 5px dotted black;
+}
